add Observable.Share demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
     <li routerLinkActive="active"><a [routerLink]="['/demo1']">Demo1 - FormControl</a></li>
     <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo2']">Demo2 - Http</a></li>
     <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo3']">Demo3 - forkJoin</a></li>
+    <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo4']">Demo4 - Share</a></li>
 </ul>
 <hr>
 <h1>Demo Code</h1>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> 
