add cancelling request demo

--- a/src/app/demo4/demo4.component.html
+++ b/src/app/demo4/demo4.component.html
@@ -1,4 +1,6 @@
 <p>
-  Observable with Share()
+  Observable with Share() & Cancelling
 </p>
 <button (click)="getData()">trigger getAsyncData</button>
+<br>
+<button (click)="cancelRequest()">cancelRequest </button>
