modify demo code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <li routerLinkActive="active"><a [routerLink]="['/demo1']">Demo1 - FormControl</a></li>
     <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo2']">Demo2 - Http</a></li>
     <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo3']">Demo3 - forkJoin</a></li>
-    <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo4']">Demo4 - Share</a></li>
+    <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo4']">Demo4 - Cancelling</a></li>
      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/demo5/1']">Demo5 - RouteParams</a></li>
 </ul>
 <hr>
