--- a/src/app/demo4/demo4.component.html
+++ b/src/app/demo4/demo4.component.html
@@ -1,6 +1,5 @@
 <p>
-  Observable with Share() & Cancelling
+  Observable with Cancelling
 </p>
-<button (click)="getData()">trigger getAsyncData</button>
 <br>
 <button (click)="cancelRequest()">cancelRequest </button>
